Fixed issue relating to footer on small screens

--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ hr .article-break {
     }
 
     .footer {
-        position: relative;
+        display: none;
     }
 
     .article img {
